# Changelog

## [x.x.x] - xxxx-xx-xx
## Fixed
- Checking the exported backup archives for truncation was broken. Yes, it took me
  this long to figure it out.


## [0.3.0] - 2022-03-31
## Changed
- Take ZFS snapshots even if the main or scratch directories are unavailable (and
  even if we're not configured to continue anyway).
- Transfer of archive to storage is done with cp and will not preserve ownership
  (prevents errors from moving across filesystem boundaries).
- Adds the -pbkdf2 argument for openssl encryption.
- Adds the -iter argument to specify the number of PBKDF2 iterations to perform, set
  to 150,000.
- Adds the -md argument for openssl hashing, using sha512 (because that seems to be
  faster than sha256 on 64-bit systems without SHA extensions).

## Added
- When checking the archive files on disk, warn if they are zero-byte files (not
  properly exported).
- When exporting the completed archive to the main backup directory, verify the size
  of the exported archive matches the size of the source archive before deleting the
  temporary directory.

## Fixed
- Do not remove the temp directory if we throw an error on an inaccessible
  source archive.

## Removed
- Since the script now takes snapshots regardless of whether the backup or temp
  directories exist, the setting to continue with a snapshot without a temp
  directory is meaningless.


## [0.2.0] - 2019-01-11
## Changed

## Added
- Licensed under the LGPL.
- Scratch / temporary directory can be set independantly of the storage directory.
- Compression and encryption can be toggled on and off independantly.
- Intermediate steps in compression and encryption can be deleted after each step
  instead of waiting until the end of the process.
- Added ability to disable automatic deletion of old archives (so the user can
  manage multiple cycles of backup archives manually, if desired).
- Script can now report errors and warnings through stderr.